force-app/main/default/objects/WeeklyLeadConversionReport__c/WeeklyLeadConversionReport__c.object-meta.xml
<CustomObject>
    <description>Contains the lead converesion report by week</description>
    <label>WeeklyLeadConversionReport</label>
    <nameField>
        <label>WeeklyLeadConversionStage</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WeeklyLeadConversionReports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>