force-app/main/default/objects/WeeklyLeadConversionReport__c/fields/CurrentWeekAmount__c.field-meta.xml
<CustomField>
    <fullName>CurrentWeekAmount__c</fullName>
    <description>Stores current week amount.</description>
    <label>CurrentWeekAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>