force-app/main/default/objects/WeeklyLeadConversionReport__c/fields/DateOfTheStage__c.field-meta.xml
<CustomField>
    <fullName>DateOfTheStage__c</fullName>
    <description>Contains when the particular stage was created.</description>
    <label>DateOfTheStage</label>
    <type>Date</type>
</CustomField>