force-app/main/default/objects/WeeklyLeadConversionReport__c/fields/PreviousWeekAmount__c.field-meta.xml
<CustomField>
    <fullName>PreviousWeekAmount__c</fullName>
    <description>Stores amount of the stage for previous week</description>
    <label>PreviousWeekAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>