force-app/main/default/objects/WeeklyLeadConversionReport__c/fields/WeeklyLeadConversionRate__c.field-meta.xml
<CustomField>
    <fullName>WeeklyLeadConversionRate__c</fullName>
    <formula>((CurrentWeekAmount__c - PreviousWeekAmount__c )/ PreviousWeekAmount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WeeklyLeadConversionRate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>