force-app/main/default/objects/WeeklyLeadConversionReport__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PreviousWeekAmount__c</columns>
    <columns>CurrentWeekAmount__c</columns>
    <columns>WeeklyLeadConversionRate__c</columns>
    <columns>DateOfTheStage__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>